--- a/B-TEAM/splite.ipynb
+++ b/B-TEAM/splite.ipynb
@@ -2,103 +2,178 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37bd20d7",
+   "execution_count": 1,
+   "id": "0724bd92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:32: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:32: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_26584\\2600586122.py:32: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  file_path = \"..\\B-TEAM\\사회복지_법령_전체.txt\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "\n",
+    "def process_law_documents(file_path):\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        # 파일 전체를 읽은 후 3개의 줄바꿈을 기준으로 나눕니다.\n",
+    "        raw_docs = re.split(r'\\n\\n\\n', f.read())\n",
+    "    \n",
+    "    cleaned_docs = []\n",
+    "\n",
+    "    for doc in raw_docs:\n",
+    "        doc = doc.strip()\n",
+    "        if not doc:\n",
+    "            continue\n",
+    "        \n",
+    "        # 1. 상단 불필요한 메뉴 제거\n",
+    "        # 메뉴 패턴이 포함되어 있다면 그 이후 내용만 추출\n",
+    "        if \"한눈보기\" in doc:\n",
+    "            parts = doc.split(\"한눈보기\", 1)\n",
+    "            doc = parts[1].strip()\n",
+    "        \n",
+    "        # 2. 하단 부칙 및 그 이후 내용 제거\n",
+    "        # '부 칙'이라는 글자가 나오면 그 앞까지만 사용\n",
+    "        body_parts = re.split(r'\\n\\s*부\\s*칙', doc)\n",
+    "        doc_body = body_parts[0].strip()\n",
+    "\n",
+    "        if doc_body:\n",
+    "            cleaned_docs.append(doc_body)\n",
+    "            \n",
+    "    return cleaned_docs\n",
+    "\n",
+    "file_path = \"..\\B-TEAM\\사회복지_법령_전체.txt\" \n",
+    "final_law_list = process_law_documents(file_path)\n",
+    "\n",
+    "# print(f\"추출된 문서 개수: {len(final_law_list)}개\")\n",
+    "# if final_law_list:\n",
+    "#     print(\"-\" * 30)\n",
+    "#     print(\"추출된 첫 번째 문서 본문 맛보기:\")\n",
+    "#     print(final_law_list[0][:150] + \"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "29eb577b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 총 42개의 청크가 생성되었습니다.\n",
-      "------------------------------\n",
-      "첫 번째 청크 내용 예시:\n",
       "성평등가족부 직제 시행규칙\n",
       "[시행 2026. 1. 6.] [성평등가족부령 제4호, 2026. 1. 6., 일부개정]\n",
       "성평등가족부(혁신행정법무담당관), 02-2100-6082\n",
       "        제1장 총칙\n",
-      "제1조(목적) 이 규칙은 성평등가족부에 두는 보조기관ㆍ보좌기관의 직급 및 직급별 정원, 「정부조직법」 제2조제3항 및 제5항에 따라 실장ㆍ국장 밑에 두는 보조기관과 이에 상당하는 보좌기관의 설치 및 사무분장 등 「성평등가족부 직제」에서 위임된 사항과 그 시행에 필요한 사항을 규정함을 목적으로 한다.\n",
-      "        제2장 성평등가족부\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:57: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "<>:57: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_28420\\1970086736.py:57: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "  file_path = \"..\\B-TEAM\\사회복지_법령_전체.txt\" # 실제 파일 경로로 수정하세요\n"
+      "제1조(목적) 이 규칙은 성평등가족부에 두는 보조기관ㆍ보좌기관의 직급...\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "from langchain_community.document_loaders import TextLoader\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "print(final_law_list[-1][:150] + \"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3a16fa5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\project\\3rd\\SKN21-3rd-1TEAM\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
     "from langchain_openai import OpenAIEmbeddings\n",
-    "from langchain_community.vectorstores import FAISS\n",
+    "from langchain_community.vectorstores import Qdrant\n",
+    "from qdrant_client import QdrantClient\n",
     "from langchain_core.documents import Document\n",
+    "from qdrant_client.http.models import Distance, VectorParams\n",
+    "from langchain_core.vectorstores import InMemoryVectorStore\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "def preprocess_law_text(raw_text):\n",
-    "    \"\"\"\n",
-    "    법령 텍스트에서 메뉴 항목과 부칙/별표를 제거하고 본문만 추출합니다.\n",
-    "    \"\"\"\n",
-    "    # [시작점] \"한눈보기\" 이후 내용만 추출\n",
-    "    start_keyword = \"한눈보기\"\n",
-    "    if start_keyword in raw_text:\n",
-    "        content = raw_text.split(start_keyword)[-1].strip()\n",
-    "    else:\n",
-    "        content = raw_text\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3c7fe038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\project\\3rd\\SKN21-3rd-1TEAM\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\USER\\.cache\\huggingface\\hub\\models--woong0322--ko-legal-sbert-finetuned. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([243, 243])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 임베딩 및 벡터 DB 설정\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "    # [종료점] \"부칙\" 혹은 \"[별표\" 이전까지만 남김\n",
-    "    end_patterns = [r\"부\\s*칙\", r\"\\[별표\"]\n",
-    "    for pattern in end_patterns:\n",
-    "        content = re.split(pattern, content)[0]\n",
-    "    \n",
-    "    return content.strip()\n",
+    "model = SentenceTransformer(\"woong0322/ko-legal-sbert-finetuned\")\n",
     "\n",
-    "def get_chunks_from_file(file_path):\n",
-    "    # --- Step 1: 로컬 TXT 파일 로드 ---\n",
-    "    loader = TextLoader(file_path, encoding='utf-8')\n",
-    "    raw_documents = loader.load()\n",
-    "    \n",
-    "    # --- Step 2: 본문만 추출 (Cleaning) ---\n",
-    "    cleaned_text = preprocess_law_text(raw_documents[0].page_content)\n",
-    "    \n",
-    "    # 정제된 텍스트를 담은 새로운 Document 객체 생성\n",
-    "    cleaned_doc = Document(\n",
-    "        page_content=cleaned_text, \n",
-    "        metadata={\"source\": file_path}\n",
-    "    )\n",
-    "    \n",
-    "    # --- Step 3: 의미 단위 분할 (Chunking) ---\n",
-    "    # 법령의 '제1조' 단위를 보존하기 위해 separators 설정\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(\n",
-    "        chunk_size=500,          # 원하는 청크 크기\n",
-    "        chunk_overlap=50,        # 앞뒤 문맥 겹침 정도\n",
-    "        separators=[\"\\n제\", \"\\n\", \" \", \"\"] \n",
-    "    )\n",
-    "    \n",
-    "    chunks = text_splitter.split_documents([cleaned_doc])\n",
-    "    \n",
-    "    return chunks\n",
+    "embeddings = model.encode(final_law_list)\n",
     "\n",
-    "file_path = \"..\\B-TEAM\\사회복지_법령_전체.txt\" \n",
-    "final_chunks = get_chunks_from_file(file_path)\n",
-    "\n",
-    "# # --- 실행 및 결과 확인 ---\n",
-    "# # 확인을 위한 출력\n",
-    "# print(f\"✅ 총 {len(final_chunks)}개의 청크가 생성되었습니다.\")\n",
-    "# print(\"-\" * 30)\n",
-    "# print(\"첫 번째 청크 내용 예시:\")\n",
-    "# print(final_chunks[0].page_content)"
+    "similarities = model.similarity(embeddings, embeddings)\n",
+    "print(similarities.shape)\n",
+    "# [3, 3]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c7fe038",
+   "id": "07d23c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore = InMemoryVectorStore.from_documents(\n",
+    "    documents=final_law_list,\n",
+    "    embedding=embeddings\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2801d870",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
