[feat] 모델 검증 로직 추가

--- a/c_team/vectorization.ipynb
+++ b/c_team/vectorization.ipynb
@@ -8,12 +8,41 @@
    "outputs": [],
    "source": [
     "from langchain_community.document_loaders import DirectoryLoader, TextLoader\n",
-    "from langchain_openai import OpenAIEmbeddings"
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_core.documents import Document\n",
+    "from pathlib import Path\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "efa74185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 법령을 각 조로 분리해서 document화\n",
+    "\n",
+    "p = Path('./data')\n",
+    "pattern =r'(?=제\\s*\\d+\\s*조(?:의\\s*\\d+)?\\s*\\([^)]+\\))'\n",
+    "documents=[]\n",
+    "for file_path in p.glob('*.txt'):\n",
+    "    file_name = str(file_path).split('/')[-1].replace('.txt', '')\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        text = f.read()\n",
+    "    articles = re.split(pattern, text)\n",
+    "    articles = [c.strip() for c in articles if c.strip()]\n",
+    "\n",
+    "    for i, article in enumerate(articles):\n",
+    "        doc = Document(\n",
+    "            page_content=article, metadata={'source': str(file_path), 'title': file_name, 'seq': i + 1}\n",
+    "        )\n",
+    "        documents.append(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7de65d69",
    "metadata": {},
    "outputs": [
@@ -21,13 +50,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 156/156 [00:00<00:00, 3223.15it/s]\n"
+      "100%|██████████| 622/622 [00:00<00:00, 3139.71it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'source': 'data/특정범죄신고자등보호법시행령.txt', 'title': '특정범죄신고자등보호법시행령'}"
+       "{'source': 'data/특별사법경찰관리에 대한 검사의 수사지휘 및 특별사법경찰관리의 수사준칙에 관한 규칙_5.txt',\n",
+       " 'title': '특별사법경찰관리에 대한 검사의 수사지휘 및 특별사법경찰관리의 수사준칙에 관한 규칙_5'}"
       ]
      },
      "execution_count": 2,
@@ -36,6 +66,8 @@
     }
    ],
    "source": [
+    "# 법령으로 구분된 파일을 불러와서 법령 통째로 document화\n",
+    "\n",
     "leader = DirectoryLoader(\n",
     "    './data',\n",
     "    glob='*.txt',\n",
@@ -57,11 +89,60 @@
    "execution_count": 3,
    "id": "e15a866d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tera/Desktop/workspace/skn_21/project/project_03_1team_repo/c_team/stores.py:19: UserWarning: Api key is used with an insecure connection.\n",
+      "  return QdrantClient(\n",
+      "/Users/tera/Desktop/workspace/skn_21/project/project_03_1team_repo/.venv/lib/python3.13/site-packages/langchain_qdrant/qdrant.py:921: UserWarning: Api key is used with an insecure connection.\n",
+      "  client = QdrantClient(**client_options)\n"
+     ]
+    }
+   ],
    "source": [
-    "from stores import init_vector_store\n",
+    "from stores import init_vector_store, QDRANT_URL\n",
     "\n",
     "vector_store = init_vector_store(documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c33858d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tera/Desktop/workspace/skn_21/project/project_03_1team_repo/c_team/stores.py:19: UserWarning: Api key is used with an insecure connection.\n",
+      "  return QdrantClient(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult(operation_id=105, status=<UpdateStatus.COMPLETED: 'completed'>)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from stores import get_client, COLLECTION_NAME\n",
+    "from qdrant_client.models import PayloadSchemaType\n",
+    "\n",
+    "client = get_client()\n",
+    "\n",
+    "client.create_payload_index(\n",
+    "    collection_name=COLLECTION_NAME,\n",
+    "    field_name=\"title\",\n",
+    "    field_schema=PayloadSchemaType.TEXT,\n",
+    ")"
    ]
   }
  ],
